# Android_Things_Iot_HyperLPR4Android

./: README.md  settings.gradle
camera/: build.gradle
camera/src/androidTest/java/test/xidian/com/camera/: ExampleInstrumentedTest.java
camera/src/main/: AndroidManifest.xml
camera/src/main/java/test/xidian/com/camera/: CameraTask.java
camera/src/test/java/test/xidian/com/camera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hyperlpr_android/: CMakeLists.txt  build.gradle
hyperlpr_android/src/androidTest/java/face/xidian/com/hyperlpr_android/: ExampleInstrumentedTest.java
hyperlpr_android/src/main/: AndroidManifest.xml
hyperlpr_android/src/main/cpp/: javaWarpper.cpp
hyperlpr_android/src/main/java/pr/hyperlpr/util/: DeepCarUtil.java
hyperlpr_android/src/main/res/values/: strings.xml
hyperlpr_android/src/test/java/face/xidian/com/hyperlpr_android/: ExampleUnitTest.java
mobile/: build.gradle
mobile/src/main/: AndroidManifest.xml
mobile/src/main/cpp/: native-lib.cpp
mobile/src/main/java/things/arc/com/hyperlpr_things_v1/: CameraActivity.java  ShowPictureActivity.java  TCPActivity.java  WelcomeActivity.java
mobile/src/main/res/layout/: activity_camera.xml  activity_show_picture.xml  activity_tcp.xml  activity_welcome.xml
mobile/src/main/res/values/: strings.xml
things/: build.gradle
things/src/main/: AndroidManifest.xml
things/src/main/cpp/: native-lib.cpp
things/src/main/java/things/arc/com/hyperlpr_things_v1/: CameraActivity.java  (+5 more)
things/src/main/res/layout/: activity_camera.xml  activity_connect_tcp.xml  activity_take_picture.xml  activity_test_gpio.xml  activity_welcome_things.xml
(+3 files in other folders)
